<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/bathMonthlyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:text="@string/monthTitle"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_creator="@integer/google_play_services_version"
        tools:layout_centerHorizontal="false"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="57dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/hoursTitle"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/hoursResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/hoursResponse"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/inShower"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/equi"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/litersResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/litersResponse"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/electricalTitle"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/coastResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/price"
        android:textAllCaps="false"
        android:textStyle="bold"
        tools:textColor="@color/colorAccent" />

</LinearLayout>