<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_def">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="43dp">

        <EditText
            android:id="@+id/WifiName"
            style="@android:style/Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wifi"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="110dp">

        <EditText
            android:id="@+id/WifiPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wifiPass"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.WanderingCubes"
        android:layout_width="128dp"
        android:layout_height="110dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        app:SpinKit_Color="@android:color/background_light" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="119dp"
        android:fontFamily="@font/abeezee"
        android:text="Procurando dispositivos..."
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@android:color/background_light"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_count_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/device_count_edit"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="number" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/package_mode_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/package_broadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/package_broadcast" />

        <RadioButton
            android:id="@+id/package_multicast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/package_multicast" />
    </RadioGroup>

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1"
        android:text="@string/confirmWifi" />

</RelativeLayout>